<resources>
    <string name="app_name">Journal app</string>
    <string name="add">add</string>
    <string name="logout">logout</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="title">TITLE</string>
    <string name="Date">DATE</string>
    <string name="hintforthoght">enter your thought</string>
    <string name="interyourtitle">interyourtitle</string>
    <string name="delete">DELETE</string>
    <string name="home">HOME</string>
</resources>
